--- a/.project_scripts/build.xml
+++ b/.project_scripts/build.xml
@@ -122,7 +122,8 @@
     <!-- =====     target: generateDocumentation     ===== -->
     <target name="generateDocumentation" depends="prepareDocumentation"
             description="--+--> Generate java documentation">
-        <javadoc sourcepath="${source.main.dir}" destdir="${docs.dir}"/>
+        <javadoc sourcepath="${source.main.dir}" destdir="${docs.dir}" access="package"
+            encoding="utf8" docencoding="utf8" charset="utf8"/>
     </target>
 
 </project>
