--- a/.project_scripts/build.xml
+++ b/.project_scripts/build.xml
@@ -129,6 +129,24 @@
     <target name="runValidationTest" depends="compileTest"
             description="--> Run validation test">
         <echo>=====Run validation tests=====</echo>
+        <echo>==========>Start Step 1 validation</echo>
+        <java dir="${source.build.test.dir}" classname="ValidationTests" fork="true">
+            <classpath refid="classpath.main"/>
+            <classpath refid="classpath.test"/>
+            <arg value="-e"/><arg value="1"/>
+        </java>
+        <echo>==========>Start Step 2 validation</echo>
+        <java dir="${source.build.test.dir}" classname="ValidationTests" fork="true">
+            <classpath refid="classpath.main"/>
+            <classpath refid="classpath.test"/>
+            <arg value="-e"/><arg value="2"/>
+        </java>
+        <echo>==========>Start Step 3 validation</echo>
+        <java dir="${source.build.test.dir}" classname="ValidationTests" fork="true">
+            <classpath refid="classpath.main"/>
+            <classpath refid="classpath.test"/>
+            <arg value="-e"/><arg value="3"/>
+        </java>
         <echo>==========>Start RZ validation</echo>
         <java dir="${source.build.test.dir}" classname="ValidationTEBvsSNR" fork="true">
             <classpath refid="classpath.main"/>
