Small fixes to unitTest and adding new step spec

--- a/.project_scripts/build.xml
+++ b/.project_scripts/build.xml
@@ -119,7 +119,7 @@
             </classpath>
             <formatter type="brief" usefile="false" />
             <batchtest>
-                <fileset dir="${source.test.dir}" includes="SimulateurTest.java" />
+                <fileset dir="${source.test.dir}"/>
             </batchtest>
         </junit>
     </target>
