--- a/.project_scripts/build.xml
+++ b/.project_scripts/build.xml
@@ -89,11 +89,6 @@
                 <classpath refid="classpath.main"/>
                 <classpath refid="classpath.test"/>
             </javac>
-            <echo>=====Compiling ${source.validation.dir} files...=====</echo>
-            <javac srcdir="${source.validation.dir}" destdir="${source.build.test.dir}" includeantruntime="false">
-                <classpath refid="classpath.main"/>
-                <classpath refid="classpath.test"/>
-            </javac>
         </target>
     <!-- endregion -->
 
@@ -133,6 +128,7 @@
         <java dir="${source.build.main.dir}" classname="Simulateur" fork="true">
             <classpath refid="classpath.main"/>
             <arg value="-s"/>
+            <arg value="-mute"/>
             <arg value="-mess"/><arg value="0100100100111"/>
         </java>
         <java dir="${source.build.main.dir}" classname="Simulateur" fork="true">
@@ -145,173 +141,171 @@
         <java dir="${source.build.main.dir}" classname="Simulateur" fork="true">
             <classpath refid="classpath.main"/>
             <arg value="-s"/>
+            <arg value="-mute"/>
             <arg value="-mess"/><arg value="20"/>
             <arg value="-seed"/><arg value="123"/>
             <arg value="-form"/><arg value="RZ"/>
             <arg value="-nbEch"/><arg value="30"/>
-            <arg value="-ampl"/><arg value="0"/><arg value="1"/>
+            <arg value="-ampl"/><arg value="-9.5"/><arg value="9.5"/>
         </java>
         <java dir="${source.build.main.dir}" classname="Simulateur" fork="true">
             <classpath refid="classpath.main"/>
             <arg value="-s"/>
+            <arg value="-mute"/>
             <arg value="-mess"/><arg value="60"/>
-            <arg value="-seed"/><arg value="1897"/>
+            <arg value="-seed"/><arg value="123"/>
             <arg value="-form"/><arg value="NRZ"/>
+            <arg value="-ampl"/><arg value="-9.5"/><arg value="9.5"/>
             <arg value="-nbEch"/><arg value="30"/>
         </java>
         <java dir="${source.build.main.dir}" classname="Simulateur" fork="true">
             <classpath refid="classpath.main"/>
             <arg value="-s"/>
+            <arg value="-mute"/>
             <arg value="-mess"/><arg value="50"/>
-            <arg value="-seed"/><arg value="12375675"/>
+            <arg value="-seed"/><arg value="123"/>
             <arg value="-form"/><arg value="NRZT"/>
+            <arg value="-ampl"/><arg value="-9.5"/><arg value="9.5"/>
             <arg value="-nbEch"/><arg value="30"/>
         </java>
         <echo>==========>Start Step 3 validation</echo>
         <java dir="${source.build.main.dir}" classname="Simulateur" fork="true">
             <classpath refid="classpath.main"/>
             <arg value="-s"/>
+            <arg value="-mute"/>
             <arg value="-mess"/><arg value="20"/>
-            <arg value="-seed"/><arg value="1233231"/>
+            <arg value="-seed"/><arg value="123"/>
             <arg value="-form"/><arg value="RZ"/>
             <arg value="-nbEch"/><arg value="30"/>
+            <arg value="-ampl"/><arg value="-9.5"/><arg value="9.5"/>
             <arg value="-snr"/><arg value="1"/>
         </java>
         <java dir="${source.build.main.dir}" classname="Simulateur" fork="true">
             <classpath refid="classpath.main"/>
             <arg value="-s"/>
+            <arg value="-mute"/>
             <arg value="-mess"/><arg value="60"/>
-            <arg value="-seed"/><arg value="12323"/>
+            <arg value="-seed"/><arg value="123"/>
             <arg value="-form"/><arg value="NRZT"/>
             <arg value="-nbEch"/><arg value="30"/>
+            <arg value="-ampl"/><arg value="-9.5"/><arg value="9.5"/>
             <arg value="-snr"/><arg value="100"/>
         </java>
         <java dir="${source.build.main.dir}" classname="Simulateur" fork="true">
             <classpath refid="classpath.main"/>
             <arg value="-s"/>
+            <arg value="-mute"/>
             <arg value="-mess"/><arg value="50"/>
-            <arg value="-seed"/><arg value="123653"/>
+            <arg value="-seed"/><arg value="123"/>
             <arg value="-form"/><arg value="NRZ"/>
             <arg value="-nbEch"/><arg value="30"/>
+            <arg value="-ampl"/><arg value="-9.5"/><arg value="9.5"/>
             <arg value="-snr"/><arg value="0"/>
         </java>
         <echo>==========>Start Step 4 validation</echo>
         <java dir="${source.build.main.dir}" classname="Simulateur" fork="true">
             <classpath refid="classpath.main"/>
             <arg value="-s"/>
-            <arg value="-mess"/><arg value="20"/>
-            <arg value="-seed"/><arg value="1233231"/>
+            <arg value="-mute"/>
+            <arg value="-mess"/><arg value="0110110011011"/>
             <arg value="-form"/><arg value="RZ"/>
             <arg value="-nbEch"/><arg value="30"/>
-            <arg value="-ti"/><arg value="5"/><arg value="0.3"/>
+            <arg value="-ampl"/><arg value="-9.5"/><arg value="9.5"/>
+            <arg value="-ti"/><arg value="10"/><arg value="0.5"/>
         </java>
         <java dir="${source.build.main.dir}" classname="Simulateur" fork="true">
             <classpath refid="classpath.main"/>
             <arg value="-s"/>
+            <arg value="-mute"/>
             <arg value="-mess"/><arg value="20"/>
-            <arg value="-seed"/><arg value="5762"/>
+            <arg value="-seed"/><arg value="123"/>
             <arg value="-form"/><arg value="NRZ"/>
+            <arg value="-ampl"/><arg value="-9.5"/><arg value="9.5"/>
             <arg value="-nbEch"/><arg value="30"/>
-            <arg value="-ti"/><arg value="7"/><arg value="0.8"/>
-            <arg value="-ti"/><arg value="17"/><arg value="0.3"/>
-            <arg value="-ti"/><arg value="29"/><arg value="0.4"/>
+            <arg value="-ti"/><arg value="10"/><arg value="0.8"/><arg value="20"/><arg value="0.3"/><arg value="30"/><arg value="0.4"/>
         </java>
         <java dir="${source.build.main.dir}" classname="Simulateur" fork="true">
             <classpath refid="classpath.main"/>
             <arg value="-s"/>
+            <arg value="-mute"/>
             <arg value="-mess"/><arg value="70"/>
-            <arg value="-seed"/><arg value="57562"/>
+            <arg value="-seed"/><arg value="123"/>
             <arg value="-form"/><arg value="NRZT"/>
+            <arg value="-ampl"/><arg value="-9.5"/><arg value="9.5"/>
             <arg value="-nbEch"/><arg value="30"/>
-            <arg value="-ti"/><arg value="7"/><arg value="0.8"/>
-            <arg value="-ti"/><arg value="14"/><arg value="0.3"/>
+            <arg value="-ti"/><arg value="10"/><arg value="0.8"/><arg value="15"/><arg value="0.3"/>
         </java>
         <java dir="${source.build.main.dir}" classname="Simulateur" fork="true">
             <classpath refid="classpath.main"/>
             <arg value="-s"/>
+            <arg value="-mute"/>
             <arg value="-mess"/><arg value="80"/>
-            <arg value="-seed"/><arg value="57545"/>
+            <arg value="-seed"/><arg value="123"/>
             <arg value="-form"/><arg value="RZ"/>
+            <arg value="-ampl"/><arg value="-9.5"/><arg value="9.5"/>
             <arg value="-nbEch"/><arg value="30"/>
             <arg value="-snr"/><arg value="1"/>
-            <arg value="-ti"/><arg value="13"/><arg value="0.8"/>
-            <arg value="-ti"/><arg value="19"/><arg value="0.3"/>
+            <arg value="-ti"/><arg value="15"/><arg value="0.8"/><arg value="20"/><arg value="0.3"/>
         </java>
         <echo>==========>Start Step 5 validation</echo>
         <java dir="${source.build.main.dir}" classname="Simulateur" fork="true">
             <classpath refid="classpath.main"/>
             <arg value="-s"/>
+            <arg value="-mute"/>
             <arg value="-mess"/><arg value="20"/>
-            <arg value="-seed"/><arg value="1233231"/>
+            <arg value="-seed"/><arg value="123"/>
             <arg value="-form"/><arg value="RZ"/>
+            <arg value="-ampl"/><arg value="-9.5"/><arg value="9.5"/>
             <arg value="-nbEch"/><arg value="30"/>
             <arg value="-codeur"/>
         </java>
         <java dir="${source.build.main.dir}" classname="Simulateur" fork="true">
             <classpath refid="classpath.main"/>
             <arg value="-s"/>
+            <arg value="-mute"/>
             <arg value="-mess"/><arg value="20"/>
-            <arg value="-seed"/><arg value="12431"/>
+            <arg value="-seed"/><arg value="123"/>
             <arg value="-form"/><arg value="NRZ"/>
+            <arg value="-ampl"/><arg value="-9.5"/><arg value="9.5"/>
             <arg value="-nbEch"/><arg value="30"/>
             <arg value="-codeur"/>
         </java>
         <java dir="${source.build.main.dir}" classname="Simulateur" fork="true">
             <classpath refid="classpath.main"/>
             <arg value="-s"/>
+            <arg value="-mute"/>
             <arg value="-mess"/><arg value="20"/>
-            <arg value="-seed"/><arg value="231"/>
+            <arg value="-seed"/><arg value="123"/>
             <arg value="-form"/><arg value="NRZT"/>
+            <arg value="-ampl"/><arg value="-9.5"/><arg value="9.5"/>
             <arg value="-nbEch"/><arg value="30"/>
             <arg value="-codeur"/>
         </java>
         <java dir="${source.build.main.dir}" classname="Simulateur" fork="true">
             <classpath refid="classpath.main"/>
             <arg value="-s"/>
+            <arg value="-mute"/>
             <arg value="-mess"/><arg value="50"/>
-            <arg value="-seed"/><arg value="1233231"/>
+            <arg value="-seed"/><arg value="123"/>
             <arg value="-form"/><arg value="RZ"/>
+            <arg value="-ampl"/><arg value="-9.5"/><arg value="9.5"/>
             <arg value="-nbEch"/><arg value="30"/>
-            <arg value="-ti"/><arg value="7"/><arg value="0.8"/>
-            <arg value="-ti"/><arg value="19"/><arg value="0.2"/>
+            <arg value="-ti"/><arg value="7"/><arg value="0.8"/><arg value="19"/><arg value="0.2"/>
             <arg value="-codeur"/>
         </java>
         <java dir="${source.build.main.dir}" classname="Simulateur" fork="true">
             <classpath refid="classpath.main"/>
             <arg value="-s"/>
+            <arg value="-mute"/>
             <arg value="-mess"/><arg value="70"/>
-            <arg value="-seed"/><arg value="153231"/>
+            <arg value="-seed"/><arg value="123"/>
             <arg value="-form"/><arg value="NRZT"/>
+            <arg value="-ampl"/><arg value="-9.5"/><arg value="9.5"/>
             <arg value="-nbEch"/><arg value="30"/>
             <arg value="-snr"/><arg value="2"/>
-            <arg value="-ti"/><arg value="13"/><arg value="0.7"/>
-            <arg value="-ti"/><arg value="19"/><arg value="0.2"/>
+            <arg value="-ti"/><arg value="13"/><arg value="0.7"/>><arg value="19"/><arg value="0.2"/>
             <arg value="-codeur"/>
         </java>
-<!--        <echo>==========>Start RZ validation</echo>-->
-<!--        <java dir="${source.build.test.dir}" classname="ValidationTEBvsSNR" fork="true">-->
-<!--            <classpath refid="classpath.main"/>-->
-<!--            <classpath refid="classpath.test"/>-->
-<!--            <arg value="-mess"/><arg value="5000"/>-->
-<!--            <arg value="-ti"/><arg value="15"/><arg value="0.5"/>-->
-<!--            <arg value="-form"/><arg value="RZ"/>-->
-<!--        </java>-->
-<!--        <echo>==========>Start NRZ validation</echo>-->
-<!--        <java dir="${source.build.test.dir}" classname="ValidationTEBvsSNR" fork="true">-->
-<!--            <classpath refid="classpath.main"/>-->
-<!--            <classpath refid="classpath.test"/>-->
-<!--            <arg value="-mess"/><arg value="5000"/>-->
-<!--            <arg value="-ti"/><arg value="15"/><arg value="0.5"/>-->
-<!--            <arg value="-form"/><arg value="NRZ"/>-->
-<!--        </java>-->
-<!--        <echo>==========>Start NRZT validation</echo>-->
-<!--        <java dir="${source.build.test.dir}" classname="ValidationTEBvsSNR" fork="true">-->
-<!--            <classpath refid="classpath.main"/>-->
-<!--            <classpath refid="classpath.test"/>-->
-<!--            <arg value="-mess"/><arg value="5000"/>-->
-<!--            <arg value="-ti"/><arg value="15"/><arg value="0.5"/>-->
-<!--            <arg value="-form"/><arg value="NRZT"/>-->
-<!--        </java>-->
 <!--        <echo>==========>Start Gaussian noise validation</echo>-->
 <!--        <java dir="${source.build.main.dir}" classname="bruit.BruitGaussien" fork="true">-->
 <!--            <classpath refid="classpath.main"/>-->
